--- a/index.html
+++ b/index.html
@@ -15,22 +15,43 @@
   </head>
   <body class="flex min-h-screen bg-gray-50">
     <aside class="fixed left-0 top-0 h-screen w-64 bg-white border-r border-gray-200 flex flex-col p-6">
-  <div class="mb-12">
-    <h1 class="text-xl font-medium text-gray-900">AlgoTracker</h1>
+  <!-- Logo -->
+  <div class="mb-10">
+    <a href="/algorithm-tracker/" class="text-xl font-bold text-gray-900 tracking-tight">
+      AlgoTracker
+    </a>
   </div>
-  <nav class="flex flex-col gap-2">
-    <a href="/algorithm-tracker/" class="flex items-center gap-3 px-4 py-3 rounded-lg text-gray-700 hover:bg-gray-100">
-      <span>🏠</span> Home
+
+  <!-- Navigation -->
+  <nav class="flex flex-col gap-1">
+    <a href="/algorithm-tracker/"
+      class="flex items-center gap-3 px-4 py-2.5 rounded-lg text-gray-600 hover:bg-gray-50 hover:text-gray-900 transition-colors">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+        stroke-width="1.5">
+        <path stroke-linecap="round" stroke-linejoin="round"
+          d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+      </svg>
+      <span class="text-sm font-medium">Home</span>
     </a>
-    <a href="/algorithm-tracker/all" class="flex items-center gap-3 px-4 py-3 rounded-lg text-gray-700 hover:bg-gray-100">
-      <span>📅</span> All
+    <a href="/algorithm-tracker/all"
+      class="flex items-center gap-3 px-4 py-2.5 rounded-lg text-gray-600 hover:bg-gray-50 hover:text-gray-900 transition-colors">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+        stroke-width="1.5">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 10h16M4 14h16M4 18h16" />
+      </svg>
+      <span class="text-sm font-medium">All</span>
     </a>
-    <a href="/algorithm-tracker/about" class="flex items-center gap-3 px-4 py-3 rounded-lg text-gray-700 hover:bg-gray-100">
-      <span>ℹ️</span> About
+    <a href="/algorithm-tracker/about"
+      class="flex items-center gap-3 px-4 py-2.5 rounded-lg text-gray-600 hover:bg-gray-50 hover:text-gray-900 transition-colors">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+        stroke-width="1.5">
+        <path stroke-linecap="round" stroke-linejoin="round"
+          d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+      </svg>
+      <span class="text-sm font-medium">About</span>
     </a>
   </nav>
 </aside>
-
     <main class="flex-1 p-6 ml-64">
       <h2 class="text-2xl font-semibold mb-6">📅 이번 달 알고리즘 기록</h2>
 
