--- a/index.html
+++ b/index.html
@@ -66,11 +66,10 @@
 
 
 
-
 <div class="bg-white rounded-2xl border border-gray-100 shadow-sm p-8">
   <!-- Calendar Header -->
   <div class="flex items-center justify-between mb-8">
-    <h2 class="text-2xl font-bold text-gray-900" id="calendar-title">0 2026</h2>
+    <h2 class="text-2xl font-bold text-gray-900" id="calendar-title">January 2026</h2>
     <div class="flex items-center gap-2">
       <button class="p-2 rounded-lg hover:bg-gray-100 text-gray-400 hover:text-gray-600 transition-colors">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
