--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
   } , 
   
   {
+    title: "[SWEA 4615] 재미있는 오셀로 게임",
+      summary: "시뮬레이션 기본...",
+        difficulty: "medium",
+          date: "Jan 05, 2026",
+            url: "/algorithm-tracker/2026/01/05/4615-swea/"
+  } , 
+  
+  {
     title: "[BOJ 1008] A/B",
       summary: "Read two integers A and B, output A/B. Error tolerance up to 10^-9",
         difficulty: "hard",
@@ -319,6 +327,14 @@
   
   {
     date: "2026-01-05",
+      title: "[SWEA 4615] 재미있는 오셀로 게임",
+        summary: "시뮬레이션 기본...",
+          difficulty: "medium",
+            url: "/algorithm-tracker/2026/01/05/4615-swea/"
+  } , 
+  
+  {
+    date: "2026-01-05",
       title: "[BOJ 1008] A/B",
         summary: "Read two integers A and B, output A/B. Error tolerance up to 10^-9",
           difficulty: "hard",
@@ -345,7 +361,7 @@
 
   const currentYear = 2026;
   const currentMonth = 1;
-  const currentDay = 7;
+  const currentDay = 8;
 
   const difficultyColors = {
     'hard': 'bg-red-500',
