deploy: 6d2fc643c4221ecbb5118ca7c32e960151affb6b

--- a/about/index.html
+++ b/about/index.html
@@ -104,6 +104,14 @@
     
   {
     title: "[SWEA 4615] 재미있는 오셀로 게임",
+      summary: "시뮬레이션 더 기본...",
+        difficulty: "easy",
+          date: "Jan 09, 2026",
+            url: "/algorithm-tracker/2026/01/09/1954-swea/"
+  } , 
+  
+  {
+    title: "[SWEA 4615] 재미있는 오셀로 게임",
       summary: "시뮬레이션 기본...",
         difficulty: "medium",
           date: "Jan 08, 2026",
@@ -280,11 +288,11 @@
       <h2 class="text-xs font-semibold uppercase tracking-widest text-gray-400 mb-4">STATS</h2>
       <div class="grid grid-cols-3 gap-4">
         <div class="text-center p-4 rounded-lg bg-gray-50">
-          <div class="text-2xl font-bold text-gray-900">5</div>
+          <div class="text-2xl font-bold text-gray-900">6</div>
           <div class="text-sm text-gray-500">Total Solved</div>
         </div>
         <div class="text-center p-4 rounded-lg bg-gray-50">
-          <div class="text-2xl font-bold text-green-600">5</div>
+          <div class="text-2xl font-bold text-green-600">6</div>
           <div class="text-sm text-gray-500">This Month</div>
         </div>
         <div class="text-center p-4 rounded-lg bg-gray-50">
@@ -297,7 +305,7 @@
     <script>
     // Calculate streak
     const postDates = [
-      "2026-01-08","2026-01-07","2026-01-05","2026-01-03","2026-01-01"
+      "2026-01-09","2026-01-08","2026-01-07","2026-01-05","2026-01-03","2026-01-01"
     ];
     
     function calculateStreak() {
