--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
     
   {
     title: "[SWEA 4615] 재미있는 오셀로 게임",
+      summary: "시뮬레이션 더 기본...",
+        difficulty: "easy",
+          date: "Jan 09, 2026",
+            url: "/algorithm-tracker/2026/01/09/1954-swea/"
+  } , 
+  
+  {
+    title: "[SWEA 4615] 재미있는 오셀로 게임",
       summary: "시뮬레이션 기본...",
         difficulty: "medium",
           date: "Jan 08, 2026",
@@ -318,6 +326,14 @@
   const posts = [
     
   {
+    date: "2026-01-09",
+      title: "[SWEA 4615] 재미있는 오셀로 게임",
+        summary: "시뮬레이션 더 기본...",
+          difficulty: "easy",
+            url: "/algorithm-tracker/2026/01/09/1954-swea/"
+  } , 
+  
+  {
     date: "2026-01-08",
       title: "[SWEA 4615] 재미있는 오셀로 게임",
         summary: "시뮬레이션 기본...",
@@ -361,7 +377,7 @@
 
   const currentYear = 2026;
   const currentMonth = 1;
-  const currentDay = 8;
+  const currentDay = 9;
 
   const difficultyColors = {
     'hard': 'bg-red-500',
