--- a/all/index.html
+++ b/all/index.html
@@ -103,7 +103,7 @@
   const allPosts = [
     
   {
-    title: "[SWEA 4615] 재미있는 오셀로 게임",
+    title: "[SWEA 1954] 달팽이 숫자",
       summary: "시뮬레이션 더 기본...",
         difficulty: "easy",
           date: "Jan 09, 2026",
@@ -584,7 +584,7 @@
                 <span class="w-2 h-2 rounded-full bg-blue-500 flex-shrink-0"></span>
               
               <div class="flex-1 min-w-0">
-                <h4 class="font-medium text-gray-900 group-hover:text-blue-600 transition-colors truncate">[SWEA 4615] 재미있는 오셀로 게임</h4>
+                <h4 class="font-medium text-gray-900 group-hover:text-blue-600 transition-colors truncate">[SWEA 1954] 달팽이 숫자</h4>
                 <span class="text-xs text-gray-400">Jan 09 · simulation</span>
               </div>
               <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-gray-300 group-hover:text-gray-400 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
