deploy: 147f250bfb441d11de663a36f913a7287e0b2ee6

--- a/about/index.html
+++ b/about/index.html
@@ -103,6 +103,14 @@
   const allPosts = [
     
   {
+    title: "[SWEA 1210] Ladder1",
+      summary: "음...",
+        difficulty: "easy",
+          date: "Jan 13, 2026",
+            url: "/algorithm-tracker/2026/01/13/1210-swea/"
+  } , 
+  
+  {
     title: "[SWEA 1954] 달팽이 숫자",
       summary: "시뮬레이션 더 기본...",
         difficulty: "easy",
@@ -288,11 +296,11 @@
       <h2 class="text-xs font-semibold uppercase tracking-widest text-gray-400 mb-4">STATS</h2>
       <div class="grid grid-cols-3 gap-4">
         <div class="text-center p-4 rounded-lg bg-gray-50">
-          <div class="text-2xl font-bold text-gray-900">6</div>
+          <div class="text-2xl font-bold text-gray-900">7</div>
           <div class="text-sm text-gray-500">Total Solved</div>
         </div>
         <div class="text-center p-4 rounded-lg bg-gray-50">
-          <div class="text-2xl font-bold text-green-600">6</div>
+          <div class="text-2xl font-bold text-green-600">7</div>
           <div class="text-sm text-gray-500">This Month</div>
         </div>
         <div class="text-center p-4 rounded-lg bg-gray-50">
@@ -305,7 +313,7 @@
     <script>
     // Calculate streak
     const postDates = [
-      "2026-01-09","2026-01-08","2026-01-07","2026-01-05","2026-01-03","2026-01-01"
+      "2026-01-13","2026-01-09","2026-01-08","2026-01-07","2026-01-05","2026-01-03","2026-01-01"
     ];
     
     function calculateStreak() {
