--- a/index.html
+++ b/index.html
@@ -103,6 +103,14 @@
   const allPosts = [
     
   {
+    title: "[SWEA 1210] Ladder1",
+      summary: "음...",
+        difficulty: "easy",
+          date: "Jan 13, 2026",
+            url: "/algorithm-tracker/2026/01/13/1210-swea/"
+  } , 
+  
+  {
     title: "[SWEA 1954] 달팽이 숫자",
       summary: "시뮬레이션 더 기본...",
         difficulty: "easy",
@@ -326,6 +334,14 @@
   const posts = [
     
   {
+    date: "2026-01-13",
+      title: "[SWEA 1210] Ladder1",
+        summary: "음...",
+          difficulty: "easy",
+            url: "/algorithm-tracker/2026/01/13/1210-swea/"
+  } , 
+  
+  {
     date: "2026-01-09",
       title: "[SWEA 1954] 달팽이 숫자",
         summary: "시뮬레이션 더 기본...",
@@ -377,7 +393,7 @@
 
   const currentYear = 2026;
   const currentMonth = 1;
-  const currentDay = 9;
+  const currentDay = 13;
 
   const difficultyColors = {
     'hard': 'bg-red-500',
