deploy: 2fb11f86efeac81ad3700e6434c57931d7773dac

--- a/about/index.html
+++ b/about/index.html
@@ -103,6 +103,14 @@
   const allPosts = [
     
   {
+    title: "[SWEA 1211] Ladder2",
+      summary: "!",
+        difficulty: "medium",
+          date: "Jan 14, 2026",
+            url: "/algorithm-tracker/2026/01/14/1211-swea/"
+  } , 
+  
+  {
     title: "[SWEA 1210] Ladder1",
       summary: "음...",
         difficulty: "easy",
@@ -296,11 +304,11 @@
       <h2 class="text-xs font-semibold uppercase tracking-widest text-gray-400 mb-4">STATS</h2>
       <div class="grid grid-cols-3 gap-4">
         <div class="text-center p-4 rounded-lg bg-gray-50">
-          <div class="text-2xl font-bold text-gray-900">7</div>
+          <div class="text-2xl font-bold text-gray-900">8</div>
           <div class="text-sm text-gray-500">Total Solved</div>
         </div>
         <div class="text-center p-4 rounded-lg bg-gray-50">
-          <div class="text-2xl font-bold text-green-600">7</div>
+          <div class="text-2xl font-bold text-green-600">8</div>
           <div class="text-sm text-gray-500">This Month</div>
         </div>
         <div class="text-center p-4 rounded-lg bg-gray-50">
@@ -313,7 +321,7 @@
     <script>
     // Calculate streak
     const postDates = [
-      "2026-01-13","2026-01-09","2026-01-08","2026-01-07","2026-01-05","2026-01-03","2026-01-01"
+      "2026-01-14","2026-01-13","2026-01-09","2026-01-08","2026-01-07","2026-01-05","2026-01-03","2026-01-01"
     ];
     
     function calculateStreak() {
