--- a/index.html
+++ b/index.html
@@ -103,6 +103,14 @@
   const allPosts = [
     
   {
+    title: "[SWEA 1211] Ladder2",
+      summary: "!",
+        difficulty: "medium",
+          date: "Jan 14, 2026",
+            url: "/algorithm-tracker/2026/01/14/1211-swea/"
+  } , 
+  
+  {
     title: "[SWEA 1210] Ladder1",
       summary: "음...",
         difficulty: "easy",
@@ -334,6 +342,14 @@
   const posts = [
     
   {
+    date: "2026-01-14",
+      title: "[SWEA 1211] Ladder2",
+        summary: "!",
+          difficulty: "medium",
+            url: "/algorithm-tracker/2026/01/14/1211-swea/"
+  } , 
+  
+  {
     date: "2026-01-13",
       title: "[SWEA 1210] Ladder1",
         summary: "음...",
@@ -393,7 +409,7 @@
 
   const currentYear = 2026;
   const currentMonth = 1;
-  const currentDay = 13;
+  const currentDay = 14;
 
   const difficultyColors = {
     'hard': 'bg-red-500',
